// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MinHeight Component should allow override of minHeight: override 1`] = `
<minheight
  props="{
  "minHeight": 1001,
  "children": [
    {}
  ]
}"
>
  <div
    class="curiosity-minheight"
    style="min-height: 1001px;"
  >
    <div
      class="curiosity-minheight__inner"
    >
      lorem ipsum
    </div>
  </div>
</minheight>
`;

exports[`MinHeight Component should render a basic component: basic 1`] = `
<minheight
  props="{
  "children": [
    {}
  ]
}"
>
  <div
    class="curiosity-minheight"
    style="min-height: 0px;"
  >
    <div
      class="curiosity-minheight__inner"
    >
      lorem ipsum
    </div>
  </div>
</minheight>
`;
